# backend/api/gen/go/app/recommend_http.pb.go
@@ -21,20 +21,24 @@ var _ = binding.EncodeURL
 
 const _ = http.SupportPackageIsVersion1
 
-const OperationRecommendServiceRecommendExposure = "/app.RecommendService/RecommendExposure"
+const OperationRecommendServiceRecommendExposureReport = "/app.RecommendService/RecommendExposureReport"
 const OperationRecommendServiceRecommendGoods = "/app.RecommendService/RecommendGoods"
+const OperationRecommendServiceRecommendGoodsActionReport = "/app.RecommendService/RecommendGoodsActionReport"
 
 type RecommendServiceHTTPServer interface {
-	// RecommendExposure 记录推荐曝光
-	RecommendExposure(context.Context, *RecommendExposureRequest) (*emptypb.Empty, error)
+	// RecommendExposureReport 上报推荐曝光事件
+	RecommendExposureReport(context.Context, *RecommendExposureReportRequest) (*emptypb.Empty, error)
 	// RecommendGoods 查询推荐商品列表
 	RecommendGoods(context.Context, *RecommendGoodsRequest) (*RecommendGoodsResponse, error)
+	// RecommendGoodsActionReport 上报推荐商品行为事件
+	RecommendGoodsActionReport(context.Context, *RecommendGoodsActionReportRequest) (*emptypb.Empty, error)
 }
 
 func RegisterRecommendServiceHTTPServer(s *http.Server, srv RecommendServiceHTTPServer) {
 	r := s.Route("/")
 	r.GET("/api/app/recommend/goods", _RecommendService_RecommendGoods0_HTTP_Handler(srv))
-	r.POST("/api/app/recommend/exposure", _RecommendService_RecommendExposure0_HTTP_Handler(srv))
+	r.POST("/api/app/recommend/event/exposure", _RecommendService_RecommendExposureReport0_HTTP_Handler(srv))
+	r.POST("/api/app/recommend/event/goods", _RecommendService_RecommendGoodsActionReport0_HTTP_Handler(srv))
 }
 
 func _RecommendService_RecommendGoods0_HTTP_Handler(srv RecommendServiceHTTPServer) func(ctx http.Context) error {
@@ -56,18 +60,40 @@ func _RecommendService_RecommendGoods0_HTTP_Handler(srv RecommendServiceHTTPServ
 	}
 }
 
-func _RecommendService_RecommendExposure0_HTTP_Handler(srv RecommendServiceHTTPServer) func(ctx http.Context) error {
+func _RecommendService_RecommendExposureReport0_HTTP_Handler(srv RecommendServiceHTTPServer) func(ctx http.Context) error {
 	return func(ctx http.Context) error {
-		var in RecommendExposureRequest
+		var in RecommendExposureReportRequest
 		if err := ctx.Bind(&in); err != nil {
 			return err
 		}
 		if err := ctx.BindQuery(&in); err != nil {
 			return err
 		}
-		http.SetOperation(ctx, OperationRecommendServiceRecommendExposure)
+		http.SetOperation(ctx, OperationRecommendServiceRecommendExposureReport)
 		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.RecommendExposure(ctx, req.(*RecommendExposureRequest))
+			return srv.RecommendExposureReport(ctx, req.(*RecommendExposureReportRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*emptypb.Empty)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _RecommendService_RecommendGoodsActionReport0_HTTP_Handler(srv RecommendServiceHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in RecommendGoodsActionReportRequest
+		if err := ctx.Bind(&in); err != nil {
+			return err
+		}
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationRecommendServiceRecommendGoodsActionReport)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.RecommendGoodsActionReport(ctx, req.(*RecommendGoodsActionReportRequest))
 		})
 		out, err := h(ctx, &in)
 		if err != nil {
@@ -79,10 +105,12 @@ func _RecommendService_RecommendExposure0_HTTP_Handler(srv RecommendServiceHTTPS
 }
 
 type RecommendServiceHTTPClient interface {
-	// RecommendExposure 记录推荐曝光
-	RecommendExposure(ctx context.Context, req *RecommendExposureRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
+	// RecommendExposureReport 上报推荐曝光事件
+	RecommendExposureReport(ctx context.Context, req *RecommendExposureReportRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
 	// RecommendGoods 查询推荐商品列表
 	RecommendGoods(ctx context.Context, req *RecommendGoodsRequest, opts ...http.CallOption) (rsp *RecommendGoodsResponse, err error)
+	// RecommendGoodsActionReport 上报推荐商品行为事件
+	RecommendGoodsActionReport(ctx context.Context, req *RecommendGoodsActionReportRequest, opts ...http.CallOption) (rsp *emptypb.Empty, err error)
 }
 
 type RecommendServiceHTTPClientImpl struct {
@@ -93,12 +121,12 @@ func NewRecommendServiceHTTPClient(client *http.Client) RecommendServiceHTTPClie
 	return &RecommendServiceHTTPClientImpl{client}
 }
 
-// RecommendExposure 记录推荐曝光
-func (c *RecommendServiceHTTPClientImpl) RecommendExposure(ctx context.Context, in *RecommendExposureRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+// RecommendExposureReport 上报推荐曝光事件
+func (c *RecommendServiceHTTPClientImpl) RecommendExposureReport(ctx context.Context, in *RecommendExposureReportRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
 	var out emptypb.Empty
-	pattern := "/api/app/recommend/exposure"
+	pattern := "/api/app/recommend/event/exposure"
 	path := binding.EncodeURL(pattern, in, false)
-	opts = append(opts, http.Operation(OperationRecommendServiceRecommendExposure))
+	opts = append(opts, http.Operation(OperationRecommendServiceRecommendExposureReport))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
@@ -115,6 +143,20 @@ func (c *RecommendServiceHTTPClientImpl) RecommendGoods(ctx context.Context, in 
 	opts = append(opts, http.Operation(OperationRecommendServiceRecommendGoods))
 	opts = append(opts, http.PathTemplate(pattern))
 	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// RecommendGoodsActionReport 上报推荐商品行为事件
+func (c *RecommendServiceHTTPClientImpl) RecommendGoodsActionReport(ctx context.Context, in *RecommendGoodsActionReportRequest, opts ...http.CallOption) (*emptypb.Empty, error) {
+	var out emptypb.Empty
+	pattern := "/api/app/recommend/event/goods"
+	path := binding.EncodeURL(pattern, in, false)
+	opts = append(opts, http.Operation(OperationRecommendServiceRecommendGoodsActionReport))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "POST", path, in, &out, opts...)
 	if err != nil {
 		return nil, err
 	}
